# modern-emby

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Emby API Details.json  LICENCE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Website/: index.html  package-lock.json  package.json  vite.config.ts
Website/public/: splashscreen.html
Website/scripts/: build-all.ps1
Website/src/: App.tsx  index.css  main.tsx  tv-navigation.css
Website/src-tauri/: Cargo.toml  tauri.conf.json
Website/src-tauri/capabilities/: default.json
Website/src-tauri/icons/: icon.icns
Website/src-tauri/src/: lib.rs
Website/src/components/: AppFallbackSkeleton.tsx  Browse.tsx  Footer.tsx  Home.tsx  Library.tsx  LoadingScreen.tsx  Login.tsx  MediaDetails.tsx  MediaSelector.tsx  ModernLoadingOverlay.tsx  Player.tsx  PlayerHost.tsx  PopularBrowse.tsx  SectionRowDraggable.tsx  Settings.tsx  Stats.tsx  UpdateBanner.tsx
Website/src/context/: PlayerUiContext.tsx
Website/src/hooks/: useTVNavigation.ts
Website/src/services/: deduplication.ts  embyApi.ts  tmdbApi.ts
Website/src/types/: emby.types.ts
