[package]
name = "Aether"
version = "3.0.10"
description = "Emby streaming app"
authors = ["DanielVNZ"]
license = "MIT"
repository = "https://github.com/DanielVNZ/Aether"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-fs = "2.0.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-libmpv = "0.3.2"
